# GalacticEngine_Public

./: CMakeLists.txt  Imgui.cmake  JoltPhysics.cmake  RmlUi.cmake
include/engine/: application.hpp
include/engine/audio/: audio.hpp
include/engine/backend/: common.hpp  windows.hpp
include/engine/fs/: fs.hpp
include/engine/graphics/: graphics.hpp  manager.hpp
include/engine/gui/: backend.hpp  renderer.hpp
include/engine/input/: input.hpp
include/engine/log/: log.hpp
include/engine/physics/: manager.hpp  physics.hpp
include/engine/strings/: strings.hpp
include/engine/utils/: freelist.hpp  memorypool.hpp  rollingaverage.hpp  textureatlas.hpp  utils.hpp
materials/: rmlUi.mat
src/: application.cpp  testapp.cpp
src/engine/audio/: listener.cpp  manager.cpp  positionalsound.cpp  sound.cpp
src/engine/backend/: common.cpp
src/engine/backend/windows/: fs.cpp  imgui.cpp  input.cpp  main.cpp  messages.cpp  rmlui.cpp  waitfor.cpp  window.cpp
src/engine/fs/: fs.cpp
src/engine/graphics/: camera.cpp  graphics.cpp  manager.cpp  scene.cpp  view.cpp
src/engine/gui/: interface.cpp  render.cpp
src/engine/input/: device.cpp  gamepad.cpp  handler.cpp  keyboard.cpp  mouse.cpp
src/engine/log/: log.cpp
src/engine/physics/: body.cpp  character.cpp  creation.cpp  manager.cpp
src/engine/strings/: strings.cpp
